fixes some links

--- a/docs/docs/css/spacing.mdx
+++ b/docs/docs/css/spacing.mdx
@@ -4,7 +4,7 @@ For common Mainsail spec spacing margins and padding, you can use `p-<size>` and
 
 These are controllable with an intuitive explicit sizing scale that comes from sizes used directly from our Figma specs.
 
-:::warning
+:::caution
 Note: These spacing utility classes utilize `!important` tags to ensure they can be used as overrides of existing styles.
 :::
 
@@ -90,7 +90,7 @@ If you have complex scenarios, reach for [AutoGrid](./?path=/docs/layout-grid-au
     </div>
 </div>
 
-:::warning
+:::caution
 No responsive features exist for the `space-` utility at this time. Beware of wrapping elements.
 :::
 
