--- a/docs/docs/css/typography.mdx
+++ b/docs/docs/css/typography.mdx
@@ -71,7 +71,7 @@ You may also use .h1, .h2, .h3, .h4 classes when needed
 
 **1 size** of label text exists:`sm`.
 
-:::info
+:::caution
 This is a text style for labeling UI content and not specifically for `<label/>` elements
 :::
 
