simplifies colors file

--- a/docs/docs/css/colors.mdx
+++ b/docs/docs/css/colors.mdx
@@ -1,5 +1,3 @@
-import { AutoGrid } from "mainsail-ui";
-
 # Colors
 
 All Mainsail spec color classes are available.
@@ -10,7 +8,7 @@ Applies Mainsail color to background `background-color:` css property.
 
 Uses the syntax `bg-<color>-<variant>`.
 
-<AutoGrid cols={2} gapCol={20} gapRow={48} className="body-text sm">
+<div>
     <div className="space-y-8">
         <div className="bg-blue-primary text-blue-light rounded p-8">
             bg-blue-primary
@@ -71,7 +69,7 @@ Uses the syntax `bg-<color>-<variant>`.
         <div className="bg-neutral-6 rounded p-8">bg-neutral-6</div>
         <div className="bg-white rounded border-blue-light p-8">bg-white</div>
     </div>
-</AutoGrid>
+</div>
 
 ## Text Colors
 
@@ -79,7 +77,7 @@ Apply Mainsail color to text `color:` css property.
 
 Uses the syntax `text-<color>-<variant>`.
 
-<AutoGrid cols={2} gapCol={20} gapRow={48} className="body-text sm">
+<div>
     <div>
         <div className="text-blue-primary p-8">text-blue-primary</div>
         <div className="text-blue-light p-8">text-blue-light</div>
@@ -122,7 +120,7 @@ Uses the syntax `text-<color>-<variant>`.
         <div className="text-neutral-6 bg-neutral-4 p-8">text-neutral-6</div>
         <div className="text-white bg-neutral-3 p-8">text-white</div>
     </div>
-</AutoGrid>
+</div>
 
 ## Border Colors
 
@@ -130,7 +128,7 @@ Apply Mainsail border and color to text `color:` css property.
 
 Uses the syntax `text-<color>-<variant>`.
 
-<AutoGrid cols={2} gapCol={20} gapRow={48} className="body-text sm">
+<div>
     <div className="space-y-4">
         <div className="border-blue-primary p-8">border-blue-primary</div>
         <div className="border-blue-light p-8">border-blue-light</div>
@@ -164,12 +162,12 @@ Uses the syntax `text-<color>-<variant>`.
             border-pink-dark
         </div>
     </div>
-    <AutoGrid cols={2} gap={8}>
+    <div>
         <div className="border-neutral-1 p-8">border-neutral-1</div>
         <div className="border-neutral-2 p-8">border-neutral-2</div>
         <div className="border-neutral-3 p-8">border-neutral-3</div>
         <div className="border-neutral-4 p-8">border-neutral-4</div>
         <div className="border-neutral-5 p-8">border-neutral-5</div>
         <div className="border-neutral-6 p-8">border-neutral-6</div>
-    </AutoGrid>
-</AutoGrid>
+    </div>
+</div>
