--- a/docs/docs/css/colors.mdx
+++ b/docs/docs/css/colors.mdx
@@ -1,3 +1,5 @@
+import { AutoGrid } from "mainsail-ui";
+
 # Colors
 
 All Mainsail spec color classes are available.
@@ -8,7 +10,7 @@ Applies Mainsail color to background `background-color:` css property.
 
 Uses the syntax `bg-<color>-<variant>`.
 
-<div>
+<AutoGrid cols={2} gapCol={12} gapRow={20}>
     <div className="space-y-8">
         <div className="bg-blue-primary text-blue-light rounded p-8">
             bg-blue-primary
@@ -69,7 +71,7 @@ Uses the syntax `bg-<color>-<variant>`.
         <div className="bg-neutral-6 rounded p-8">bg-neutral-6</div>
         <div className="bg-white rounded border-blue-light p-8">bg-white</div>
     </div>
-</div>
+</AutoGrid>
 
 ## Text Colors
 
@@ -77,7 +79,7 @@ Apply Mainsail color to text `color:` css property.
 
 Uses the syntax `text-<color>-<variant>`.
 
-<div>
+<AutoGrid cols={2} gapCol={12} gapRow={20}>
     <div>
         <div className="text-blue-primary p-8">text-blue-primary</div>
         <div className="text-blue-light p-8">text-blue-light</div>
@@ -120,7 +122,7 @@ Uses the syntax `text-<color>-<variant>`.
         <div className="text-neutral-6 bg-neutral-4 p-8">text-neutral-6</div>
         <div className="text-white bg-neutral-3 p-8">text-white</div>
     </div>
-</div>
+</AutoGrid>
 
 ## Border Colors
 
@@ -128,7 +130,7 @@ Apply Mainsail border and color to text `color:` css property.
 
 Uses the syntax `text-<color>-<variant>`.
 
-<div>
+<AutoGrid cols={2} gapCol={12} gapRow={20}>
     <div className="space-y-4">
         <div className="border-blue-primary p-8">border-blue-primary</div>
         <div className="border-blue-light p-8">border-blue-light</div>
@@ -170,4 +172,4 @@ Uses the syntax `text-<color>-<variant>`.
         <div className="border-neutral-5 p-8">border-neutral-5</div>
         <div className="border-neutral-6 p-8">border-neutral-6</div>
     </div>
-</div>
+</AutoGrid>
