adds a info callout

--- a/src/docs/usage/0-react-getting-started.stories.mdx
+++ b/src/docs/usage/0-react-getting-started.stories.mdx
@@ -46,7 +46,9 @@ For context-specific coloring, the **intent** prop is used.
 
 Unlike a holistic style prop of **variant**, the _intent_ prop is _intended_ 😉 to be used to alter the color of a component variant for a particular use case.
 
-_Note: In the case where any prop value is `default`, it can be omitted_
+:::info
+In the case where any prop value is `default`, it can be omitted
+:::
 
 **Examples**
 
