--- a/docs/docs/development/editor-config.mdx
+++ b/docs/docs/development/editor-config.mdx
@@ -14,7 +14,7 @@ To get the most out of these, we (strongly) **recommend** you use an editor that
 
 <hr />
 
-## Setup for VS Code <img src="https://user-images.githubusercontent.com/30707961/107785711-ed22f300-6d1a-11eb-8c7f-c78bde3d014d.png" style={{display: "inline"}} width="20" />
+## Setup for VS Code
 
 Once you run `yarn install` on the project, you should have the necessary linters and plugins for the project **but** you will still need to **install the editor plugins** to enable operation during editing.
 
