fixes pages so that ssr can complete build

--- a/docs/docs/css/sizing.mdx
+++ b/docs/docs/css/sizing.mdx
@@ -1,6 +1,6 @@
 # Sizing
 
-These sizing utilities are not meant to be a replacement for AutoGrid or Flex components.
+These sizing utilities are not meant to be a replacement for [AutoGrid](/components?path=/story/layout-grid-autogrid--simple-grid) or Flex components.
 
 > Note: At this time, responsive utilities do not exist for this because AutoGrid/Flex components can control sizing at breakpoints.
 
