--- a/docs/docs/css/spacing.mdx
+++ b/docs/docs/css/spacing.mdx
@@ -65,7 +65,7 @@ If desired, you can supply `x` or `y` to apply to both sides.
 
 If you need to quickly apply some in-between spacing in a simple way use, `space-y-<amount>` and `space-x-<amount>` (where amount is an integer in the table above) on a parent item. This adds margin to all but the first item of children.
 
-If you have complex scenarios, reach for [AutoGrid](./?path=/docs/layout-grid-autogrid--simple-grid).
+If you have complex scenarios, reach for [AutoGrid](/components?path=/docs/layout-grid-autogrid--simple-grid).
 
 <div className="space-y-20 mb-20">
     <span className="body-text mb-20">
