Two new icons and a readme

--- a/docs/docs/development/getting-started.mdx
+++ b/docs/docs/development/getting-started.mdx
@@ -19,6 +19,8 @@ git clone git@github.com:BreezeChMS/mainsail-ui.git
 
 **Install the depenedencies**
 
+_Mainsail-UI requires node 14 to be installed on your system._
+
 ```
 cd mainsail-ui
 
